# 8INF916-Reseau

./: CMakeLists.txt  README.md
.github/workflows/: cmake-build-action.yml  github-actions-demo.yml
Client/: CMakeLists.txt
Client/src/: Client.cpp  Client.h
Server/: CMakeLists.txt
Server/src/: Server.cpp  Server.h
StaticSocket/: CMakeLists.txt
StaticSocket/include/: Socket.h  Socket_posix.h  Socket_windows.h
StaticSocket/src/: Socket_common.cpp  Socket_posix.cpp  Socket_windows.cpp
